automation/rust/emu-automation-sys/src/lib.rs


unsafe extern "C" {
    pub fn emu_automation_abi_version() -> u32;
    pub fn emu_automation_result_name(result: emu_automation_result_t) -> *const c_char;
    pub fn emu_automation_machine_destroy(machine: *mut emu_automation_machine_t);
    pub fn emu_automation_machine_describe(
        machine: *mut emu_automation_machine_t,
        out_descriptor: *mut emu_automation_machine_descriptor_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_capabilities(
        machine: *mut emu_automation_machine_t,
        out_capabilities: *mut emu_automation_capabilities_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_character_mapping_count(
        machine: *mut emu_automation_machine_t,
        out_count: *mut usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_character_mapping_descriptor(
        machine: *mut emu_automation_machine_t,
        index: usize,
        out_descriptor: *mut emu_automation_character_mapping_descriptor_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_pause(
        machine: *mut emu_automation_machine_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_resume(
        machine: *mut emu_automation_machine_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_reset(
        machine: *mut emu_automation_machine_t,
        kind: emu_automation_reset_kind_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_step_frame(
        machine: *mut emu_automation_machine_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_machine_run_frames(
        machine: *mut emu_automation_machine_t,
        frame_count: u64,
    ) -> emu_automation_result_t;
    pub fn emu_automation_screen_framebuffer(
        machine: *mut emu_automation_machine_t,
        out_snapshot: *mut emu_automation_framebuffer_snapshot_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_framebuffer_release(
        machine: *mut emu_automation_machine_t,
        snapshot: *mut emu_automation_framebuffer_snapshot_t,
    );
    pub fn emu_automation_screen_text_grid(
        machine: *mut emu_automation_machine_t,
        region_id: *const c_char,
        out_snapshot: *mut emu_automation_text_grid_snapshot_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_memory_read(
        machine: *mut emu_automation_machine_t,
        address: u64,
        out_bytes: *mut u8,
        size: usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_memory_write(
        machine: *mut emu_automation_machine_t,
        address: u64,
        bytes: *const u8,
        size: usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_execution_program_counter(
        machine: *mut emu_automation_machine_t,
        out_program_counter: *mut u64,
    ) -> emu_automation_result_t;
    pub fn emu_automation_execution_frame_metadata(
        machine: *mut emu_automation_machine_t,
        out_metadata: *mut emu_automation_frame_metadata_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_execution_current_instruction(
        machine: *mut emu_automation_machine_t,
        out_instruction: *mut emu_automation_instruction_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_register_count(
        machine: *mut emu_automation_machine_t,
        out_count: *mut usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_register_read(
        machine: *mut emu_automation_machine_t,
        out_registers: *mut emu_automation_register_value_t,
        register_capacity: usize,
        out_register_count: *mut usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_register_write(
        machine: *mut emu_automation_machine_t,
        register_name: *const c_char,
        value: u64,
    ) -> emu_automation_result_t;
    pub fn emu_automation_screen_text_view_count(
        machine: *mut emu_automation_machine_t,
        out_count: *mut usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_screen_text_view_descriptor(
        machine: *mut emu_automation_machine_t,
        index: usize,
        out_descriptor: *mut emu_automation_text_view_descriptor_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_text_grid_release(
        machine: *mut emu_automation_machine_t,
        snapshot: *mut emu_automation_text_grid_snapshot_t,
    );
    pub fn emu_automation_input_key(
        machine: *mut emu_automation_machine_t,
        event: *const emu_automation_key_event_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_input_controller_button(
        machine: *mut emu_automation_machine_t,
        event: *const emu_automation_controller_button_event_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_events_poll(
        machine: *mut emu_automation_machine_t,
        after_sequence: u64,
        out_event: *mut emu_automation_event_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_events_dispatch_available(
        machine: *mut emu_automation_machine_t,
        inout_after_sequence: *mut u64,
        max_events: usize,
        callback: emu_automation_event_callback_t,
        user_data: *mut c_void,
        out_dispatch_count: *mut usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_events_dispatch_matching(
        machine: *mut emu_automation_machine_t,
        inout_after_sequence: *mut u64,
        event_type: emu_automation_event_type_t,
        max_events: usize,
        callback: emu_automation_event_callback_t,
        user_data: *mut c_void,
        out_dispatch_count: *mut usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_subscription_create(
        machine: *mut emu_automation_machine_t,
        event_type: emu_automation_event_type_t,
        after_sequence: u64,
        callback: emu_automation_event_callback_t,
        user_data: *mut c_void,
        out_subscription: *mut *mut emu_automation_subscription_t,
    ) -> emu_automation_result_t;
    pub fn emu_automation_subscription_dispatch_available(
        subscription: *mut emu_automation_subscription_t,
        max_events: usize,
        out_dispatch_count: *mut usize,
    ) -> emu_automation_result_t;
    pub fn emu_automation_subscription_after_sequence(
        subscription: *const emu_automation_subscription_t,
    ) -> u64;
    pub fn emu_automation_subscription_set_after_sequence(
        subscription: *mut emu_automation_subscription_t,
        after_sequence: u64,
    ) -> emu_automation_result_t;
    pub fn emu_automation_subscription_destroy(
        subscription: *mut emu_automation_subscription_t,
    );
    pub fn emu_automation_event_release(
        machine: *mut emu_automation_machine_t,
        event: *mut emu_automation_event_t,
    );
}
